# codeoptix

./: FactExtractor.cpp  NEONPseudocode.g4  NEONVisitor.cpp  NEONVisitor.h  README.md  advsimd.json  compare_costs.py  extract_advsimd.py  fetch_intrinsics.py  fetch_intrinsics_async.py  fetch_intrinsics_final.py  fetch_intrinsics_incremental.py  generate_includes.py  main.cpp  rulegen.py  run_analysis.sh  score_suggestions.py
antlr4/: ArmPseudo.g4  ArmPseudo.g4~  ArmPseudo.interp  ArmPseudo.tokens  ArmPseudoBaseListener.java  ArmPseudoLexer.interp  ArmPseudoLexer.java  ArmPseudoLexer.tokens  ArmPseudoListener.java  ArmPseudoParser.java
demo/: CMakeLists.txt  FactExporter.cpp  FactExporter.h  main.c  run.sh  uppack-new.c  uppack.c
demo/datalog/: vadd_s16.dl  vadd_s32.dl  vadd_s64.dl  vadd_s8.dl  vadd_u16.dl  vadd_u32.dl  vadd_u64.dl  vadd_u8.dl  vaddd_s64.dl  vaddq_s16.dl  vaddq_s32.dl  vaddq_s64.dl  vaddq_s8.dl  vaddq_u16.dl  vaddq_u32.dl  vaddq_u64.dl  vaddq_u8.dl
demo/scripts/: generate_dl_from_intrinsic.py  run_pipeline.py  run_souffle.py  suggest_gen.py
demo/test/: test_vaddq_s8.c  vadd_test.c
output/Basic_intrinsics/Compare/: vcagtq_f64.pseudo  vcgtzq_s16.pseudo
output/Basic_intrinsics/Data_type_conversion/: vcvt_f32_f64.pseudo  vcvtd_u64_f64.pseudo  vcvtps_s32_f32.pseudo  vcvtx_high_f32_f64.pseudo
output/Basic_intrinsics/Move/: vqmovn_high_u32.pseudo
output/Basic_intrinsics/Scalar_arithmetic/: vmul_lane_u32.pseudo
pseudo/Basic_intrinsics/Load/: vld1_p16.pseudo  (+3 more)
scripts/: advsimd.json  differ_count.py  fetch_intrinsics_async.py  indent_to_braces.py
(+262 files in other folders)
